--- a/index.html
+++ b/index.html
@@ -48,18 +48,20 @@
     </div>
     <hr>
     <div class="contact-me">
-      <h2>Get In Touch</h2>
+
+
+      <h2><em>Get In Touch</em></h2>
       <h3>Contact me on any of these!</h3>
-      <p>This is my email</p>
-      <a class="btn" href="mailto:diegojavier142003@gmail.com">CONTACT ME</a>
+      <p>diegomora.dev@gmail.com</p>
+      <a class="btn" href="mailto:diegomora.dev@gmail.com">CONTACT ME</a>
     </div>
   </div>
 
 
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com//in//diego-mora-38890522a/">LinkedIn</a>
+    <a class="footer-link" href="https://github.com/XavierMora03">Github</a>
     <a class="footer-link" href="https://twitter.com//Javier_Mora3">Twitter</a>
-    <p>© Name Surname.</p>
   </div>
 </body>
 
